--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>予定調整</title>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const form = document.getElementById('schedule-form');
+            form.addEventListener('submit', async (event) => {
+                event.preventDefault();
+
+                const formData = new FormData(form);
+                const dates = formData.getAll('datetime');
+                const sender = 'hikachofaw@gmail.com'; // Replace with the sender's unique identifier
+
+                const data = {
+                    sender: sender,
+                    dates: dates
+                };
+
+                // Replace the URL with the actual URL of your Google Apps Script web app
+                const url = 'https://script.google.com/macros/s/AKfycbzMQgKuvkK3m_5xAWPSyze0kVyqRLHioKyW00G4EGYHeAPx3bg_9opbA2nwo4i82z2n/exec';
+                const response = await fetch(url, {
+                    method: 'POST',
+                    body: JSON.stringify(data)
+                });
+
+                if (response.ok) {
+                    alert('データが送信されました');
+                } else {
+                    alert('データの送信に失敗しました');
+                }
+            });
+        });
+    </script>
 </head>
 <body>
     <h1>予定調整</h1>
@@ -21,6 +51,5 @@
 
         <button type="submit">送信</button>
     </form>
-
 </body>
 </html>
